# uvcoro

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  main.cpp  print.cpp  print.h  vcpkg.json  x64-linux-clang-12-libxx-ldd.toolchain.cmake
cmake/: x64-linux-clang-12-libcxx-ldd.toolchain.cmake  x64-linux-clang-libcxx.cmake
example/: echo_server.cpp
include/uvcoro/: app.h  coroutine_handle.h  logger.h  operations.h  promise.h  unit.h  uvcoro.h
include/uvcoro/detail/: fastpimpl.h  layout.h
include/uvcoro/operation/: delay.h  read.h  read_or_die.h
include/uvcoro/operation/detail/: read.h
include/uvcoro/tcp/: acceptor.h
src/: app.cpp  promise.cpp  unit.cpp
src/operation/: delay.cpp  read.cpp  read_or_die.cpp
src/operation/detail/: read.cpp
src/tcp/: acceptor.cpp
tests/: example.cpp
